welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but 'true' found.
	if (hour < 7 talking==true || hour > 20 && talking==true)
                              ^parotTrouble:6: error: illegal start of simple expression
}
^